--- a/image_app/templates/index.html
+++ b/image_app/templates/index.html
@@ -38,7 +38,8 @@ video {
     <p><a class="refresh-button2" href="/show-text/">View Text File</a></p>
     <p><a class="refresh-button2" href="/show-jonna/">Jonna Tutorial</a></p>
     <p><a class="refresh-button2" href="/show-videos/">View Videos</a></p>
-
+    <p><a class="refresh-button2" href="/search-code/">Search Code</a></p>
+    <p><a class="refresh-button2" href="/edit-text/">Edit Text</a></p>
            {% load static %}
  
             <source src="{% static 'vokoscreen_captures/summary.mp3' %}" type="audio/mpeg">
